sfdx/force-app/main/default/objects/Twilio_Voice_Transcription__e/Twilio_Voice_Transcription__e.object-meta.xml
<CustomObject>
    <label>Twilio Voice Transcription</label>
    <pluralLabel>Twilio Voice Transcriptions</pluralLabel>
</CustomObject>