sfdx/force-app/main/default/objects/Twilio_Voice_Transcription__e/fields/AccountSid__c.field-meta.xml
<CustomField>
    <fullName>AccountSid__c</fullName>
    <label>AccountSid</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>