sfdx/force-app/main/default/objects/Twilio_Voice_Transcription__e/fields/CallSid__c.field-meta.xml
<CustomField>
    <fullName>CallSid__c</fullName>
    <label>CallSid</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>