sfdx/force-app/main/default/objects/Twilio_Voice_Transcription__e/fields/Confidence__c.field-meta.xml
<CustomField>
    <fullName>Confidence__c</fullName>
    <label>Confidence</label>
    <precision>7</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>