sfdx/force-app/main/default/objects/Twilio_Voice_Transcription__e/fields/sequenceNum__c.field-meta.xml
<CustomField>
    <fullName>sequenceNum__c</fullName>
    <label>sequenceNum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>