sfdx/force-app/main/default/objects/Twilio_Voice_Transcription__e/fields/Speaker__c.field-meta.xml
<CustomField>
    <fullName>Speaker__c</fullName>
    <label>Speaker</label>
    <length>255</length>
    <type>Text</type>
</CustomField>