sfdx/force-app/main/default/objects/Twilio_Voice_Transcription__e/fields/StreamSid__c.field-meta.xml
<CustomField>
    <fullName>StreamSid__c</fullName>
    <label>StreamSid</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>